RESOLVED FIXED135153
ASSERTION FAILED: generatingElement() in WebCore::RenderNamedFlowFragment::regionOversetState
https://bugs.webkit.org/show_bug.cgi?id=135153
Summary ASSERTION FAILED: generatingElement() in WebCore::RenderNamedFlowFragment::re...
Martin Hodovan
Reported 2014-07-22 01:55:53 PDT
Test: <div style="-webkit-flow-from: Georgia; -webkit-columns:2;"></div> Output: ASSERTION FAILED: generatingElement() /home/martin/Data/WebKit2/Source/WebCore/rendering/RenderNamedFlowFragment.cpp(302) : WebCore::RegionOversetState WebCore::RenderNamedFlowFragment::regionOversetState() const Backtrace: #0 0x00007ffff58284d1 in WTFCrash () at Source/WTF/wtf/Assertions.cpp:333 #1 0x00007ffff150e569 in WebCore::RenderNamedFlowFragment::regionOversetState (this=0x731d10) at WebCore/rendering/RenderNamedFlowFragment.cpp:302 #2 0x00007ffff150e79b in WebCore::RenderNamedFlowFragment::updateOversetState (this=0x731d10) at WebCore/rendering/RenderNamedFlowFragment.cpp:323 #3 0x00007ffff150e31c in WebCore::RenderNamedFlowFragment::layoutBlock (this=0x731d10, relayoutChildren=false) at Source/WebCore/rendering/RenderNamedFlowFragment.cpp:267 #4 0x00007ffff13ae0f7 in WebCore::RenderBlock::layout (this=0x731d10) at Source/WebCore/rendering/RenderBlock.cpp:1018 #5 0x00007ffff137b061 in WebCore::RenderElement::layoutIfNeeded (this=0x731d10) at Source/WebCore/rendering/RenderElement.h:102 #6 0x00007ffff13af53a in WebCore::RenderBlock::simplifiedNormalFlowLayout (this=0x730fb0) at Source/WebCore/rendering/RenderBlock.cpp:1305 #7 0x00007ffff13af6d8 in WebCore::RenderBlock::simplifiedLayout (this=0x730fb0) at Source/WebCore/rendering/RenderBlock.cpp:1322 #8 0x00007ffff13d7c54 in WebCore::RenderBlockFlow::layoutBlock (this=0x730fb0, relayoutChildren=false, pageLogicalHeight=...) at Source/WebCore/rendering/RenderBlockFlow.cpp:433 #9 0x00007ffff13ae0f7 in WebCore::RenderBlock::layout (this=0x730fb0) at Source/WebCore/rendering/RenderBlock.cpp:1018 #10 0x00007ffff1463e87 in WebCore::RenderFlowThread::layout (this=0x730fb0) at Source/WebCore/rendering/RenderFlowThread.cpp:201 #11 0x00007ffff1502640 in WebCore::RenderMultiColumnFlowThread::layout (this=0x730fb0) at Source/WebCore/rendering/RenderMultiColumnFlowThread.cpp:135 #12 0x00007ffff137b061 in WebCore::RenderElement::layoutIfNeeded (this=0x730fb0) at Source/WebCore/rendering/RenderElement.h:102 #13 0x00007ffff13af53a in WebCore::RenderBlock::simplifiedNormalFlowLayout (this=0x76d3a0) at Source/WebCore/rendering/RenderBlock.cpp:1305 #14 0x00007ffff13af6d8 in WebCore::RenderBlock::simplifiedLayout (this=0x76d3a0) at Source/WebCore/rendering/RenderBlock.cpp:1322 #15 0x00007ffff13d7c54 in WebCore::RenderBlockFlow::layoutBlock (this=0x76d3a0, relayoutChildren=false, pageLogicalHeight=...) at Source/WebCore/rendering/RenderBlockFlow.cpp:433 #16 0x00007ffff13ae0f7 in WebCore::RenderBlock::layout (this=0x76d3a0) at Source/WebCore/rendering/RenderBlock.cpp:1018 #17 0x00007ffff137b061 in WebCore::RenderElement::layoutIfNeeded (this=0x76d3a0) at Source/WebCore/rendering/RenderElement.h:102 #18 0x00007ffff13af53a in WebCore::RenderBlock::simplifiedNormalFlowLayout (this=0x6ef210) at Source/WebCore/rendering/RenderBlock.cpp:1305 #19 0x00007ffff13af6d8 in WebCore::RenderBlock::simplifiedLayout (this=0x6ef210) at Source/WebCore/rendering/RenderBlock.cpp:1322 #20 0x00007ffff13d7c54 in WebCore::RenderBlockFlow::layoutBlock (this=0x6ef210, relayoutChildren=false, pageLogicalHeight=...) at Source/WebCore/rendering/RenderBlockFlow.cpp:433 #21 0x00007ffff13ae0f7 in WebCore::RenderBlock::layout (this=0x6ef210) at Source/WebCore/rendering/RenderBlock.cpp:1018 #22 0x00007ffff137b061 in WebCore::RenderElement::layoutIfNeeded (this=0x6ef210) at Source/WebCore/rendering/RenderElement.h:102 #23 0x00007ffff13af53a in WebCore::RenderBlock::simplifiedNormalFlowLayout (this=0x6ef140) at Source/WebCore/rendering/RenderBlock.cpp:1305 #24 0x00007ffff13af6d8 in WebCore::RenderBlock::simplifiedLayout (this=0x6ef140) at Source/WebCore/rendering/RenderBlock.cpp:1322 #25 0x00007ffff13d7c54 in WebCore::RenderBlockFlow::layoutBlock (this=0x6ef140, relayoutChildren=false, pageLogicalHeight=...) at Source/WebCore/rendering/RenderBlockFlow.cpp:433 #26 0x00007ffff13ae0f7 in WebCore::RenderBlock::layout (this=0x6ef140) at Source/WebCore/rendering/RenderBlock.cpp:1018 #27 0x00007ffff137b061 in WebCore::RenderElement::layoutIfNeeded (this=0x6ef140) at Source/WebCore/rendering/RenderElement.h:102 #28 0x00007ffff13af53a in WebCore::RenderBlock::simplifiedNormalFlowLayout (this=0x6234a0) at Source/WebCore/rendering/RenderBlock.cpp:1305 #29 0x00007ffff13af6d8 in WebCore::RenderBlock::simplifiedLayout (this=0x6234a0) at Source/WebCore/rendering/RenderBlock.cpp:1322 #30 0x00007ffff13d7c54 in WebCore::RenderBlockFlow::layoutBlock (this=0x6234a0, relayoutChildren=false, pageLogicalHeight=...) at Source/WebCore/rendering/RenderBlockFlow.cpp:433 #31 0x00007ffff13ae0f7 in WebCore::RenderBlock::layout (this=0x6234a0) at Source/WebCore/rendering/RenderBlock.cpp:1018 #32 0x00007ffff1585f4d in WebCore::RenderView::layoutContent (this=0x6234a0, state=...) at Source/WebCore/rendering/RenderView.cpp:229 #33 0x00007ffff15861cf in WebCore::RenderView::layoutContentToComputeOverflowInRegions (this=0x6234a0, state=...) at Source/WebCore/rendering/RenderView.cpp:305 #34 0x00007ffff1586630 in WebCore::RenderView::layout (this=0x6234a0) at Source/WebCore/rendering/RenderView.cpp:356 #35 0x00007ffff1129910 in WebCore::FrameView::layout (this=0x6ef620, allowSubtree=true) at Source/WebCore/page/FrameView.cpp:1272 #36 0x00007ffff0b87695 in WebCore::Document::implicitClose (this=0x71c630) at Source/WebCore/dom/Document.cpp:2434 #37 0x00007ffff0ff62dd in WebCore::FrameLoader::checkCallImplicitClose (this=0x6de0c8) at Source/WebCore/loader/FrameLoader.cpp:896 #38 0x00007ffff0ff6088 in WebCore::FrameLoader::checkCompleted (this=0x6de0c8) at Source/WebCore/loader/FrameLoader.cpp:842 #39 0x00007ffff0ff5e10 in WebCore::FrameLoader::finishedParsing (this=0x6de0c8) at Source/WebCore/loader/FrameLoader.cpp:762 #40 0x00007ffff0b8f075 in WebCore::Document::finishedParsing (this=0x71c630) at Source/WebCore/dom/Document.cpp:4517 #41 0x00007ffff0e92289 in WebCore::HTMLConstructionSite::finishedParsing (this=0x76af08) at Source/WebCore/html/parser/HTMLConstructionSite.cpp:395 #42 0x00007ffff0ecc5f5 in WebCore::HTMLTreeBuilder::finished (this=0x76aef0) at Source/WebCore/html/parser/HTMLTreeBuilder.cpp:2997 #43 0x00007ffff0e99d28 in WebCore::HTMLDocumentParser::end (this=0x70f010) at Source/WebCore/html/parser/HTMLDocumentParser.cpp:439 #44 0x00007ffff0e99e13 in WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd (this=0x70f010) at Source/WebCore/html/parser/HTMLDocumentParser.cpp:450 #45 0x00007ffff0e98a5d in WebCore::HTMLDocumentParser::prepareToStopParsing (this=0x70f010) at Source/WebCore/html/parser/HTMLDocumentParser.cpp:165 #46 0x00007ffff0e99e56 in WebCore::HTMLDocumentParser::attemptToEnd (this=0x70f010) at Source/WebCore/html/parser/HTMLDocumentParser.cpp:462 #47 0x00007ffff0e99f0d in WebCore::HTMLDocumentParser::finish (this=0x70f010) at Source/WebCore/html/parser/HTMLDocumentParser.cpp:490 #48 0x00007ffff0fe8251 in WebCore::DocumentWriter::end (this=0x7911e0) at Source/WebCore/loader/DocumentWriter.cpp:250 #49 0x00007ffff0fd28f9 in WebCore::DocumentLoader::finishedLoading (this=0x791140, finishTime=0) at Source/WebCore/loader/DocumentLoader.cpp:441 #50 0x00007ffff0fd2662 in WebCore::DocumentLoader::notifyFinished (this=0x791140, resource=0x7ac340) at Source/WebCore/loader/DocumentLoader.cpp:375 #51 0x00007ffff107fc42 in WebCore::CachedResource::checkNotify (this=0x7ac340) at Source/WebCore/loader/cache/CachedResource.cpp:334 #52 0x00007ffff107fd28 in WebCore::CachedResource::finishLoading (this=0x7ac340) at Source/WebCore/loader/cache/CachedResource.cpp:350 #53 0x00007ffff107cd26 in WebCore::CachedRawResource::finishLoading (this=0x7ac340, data=0x685ed0) at Source/WebCore/loader/cache/CachedRawResource.cpp:98 #54 0x00007ffff1032d1e in WebCore::SubresourceLoader::didFinishLoading (this=0x7ac8a0, finishTime=0) at Source/WebCore/loader/SubresourceLoader.cpp:310 #55 0x00007ffff102efef in WebCore::ResourceLoader::didFinishLoading (this=0x7ac8a0, finishTime=0) at Source/WebCore/loader/ResourceLoader.cpp:517 #56 0x00007ffff193e23f in WebCore::readCallback (asyncResult=0x7b01c0, data=0x7aced0) at Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:1302 #57 0x00007fffebef3aaa in async_ready_callback_wrapper (source_object=0x6851b0, res=0x7b01c0, user_data=0x7aced0) at ginputstream.c:519 #58 0x00007fffebf1347b in g_task_return_now (task=0x7b01c0) at gtask.c:1108 #59 0x00007fffebf13499 in complete_in_idle_cb (task=0x7b01c0) at gtask.c:1117 #60 0x00007fffeb963536 in g_main_dispatch (context=0x67f700) at gmain.c:3065 #61 g_main_context_dispatch (context=context@entry=0x67f700) at gmain.c:3641 #62 0x00007fffeccd95c0 in _ecore_glib_select__locked (ecore_timeout=<optimized out>, efds=<optimized out>, wfds=0x7fffffffd9c0, rfds=0x7fffffffd940, ecore_fds=8, ctx=<optimized out>) at lib/ecore/ecore_glib.c:172 #63 _ecore_glib_select (ecore_fds=8, rfds=0x7fffffffd940, wfds=0x7fffffffd9c0, efds=<optimized out>, ecore_timeout=<optimized out>) at lib/ecore/ecore_glib.c:204 #64 0x00007fffeccdc0a4 in _ecore_main_select (timeout=<optimized out>) at lib/ecore/ecore_main.c:1579 #65 0x00007fffeccdcc45 in _ecore_main_loop_iterate_internal (once_only=once_only@entry=0) at lib/ecore/ecore_main.c:2007 #66 0x00007fffeccdcd07 in ecore_main_loop_begin () at lib/ecore/ecore_main.c:1042 #67 0x00007ffff7678933 in WTF::RunLoop::run () at Source/WTF/wtf/efl/RunLoopEfl.cpp:51 #68 0x00007ffff75fd5fe in WebKit::ChildProcessMain<WebKit::WebProcess, WebKit::WebProcessMain> (argc=2, argv=0x7fffffffde68) at Source/WebKit2/Shared/unix/ChildProcessMain.h:61 #69 0x00007ffff75fd3db in WebKit::WebProcessMainUnix (argc=2, argv=0x7fffffffde68) at Source/WebKit2/WebProcess/efl/WebProcessMainEfl.cpp:128 #70 0x0000000000400840 in main (argc=2, argv=0x7fffffffde68) at Source/WebKit2/WebProcess/EntryPoint/unix/WebProcessMain.cpp:32
Attachments
Patch (6.07 KB, patch)
2014-07-22 07:37 PDT, Mihnea Ovidenie
no flags
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 (522.51 KB, application/zip)
2014-07-22 10:40 PDT, Build Bot
no flags
Patch for landing (6.44 KB, patch)
2014-07-23 04:33 PDT, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2014-07-22 07:37:56 PDT
Dave Hyatt
Comment 2 2014-07-22 09:26:13 PDT
Comment on attachment 235288 [details] Patch r=me, might want to put a FIXME in the code to explain why the check is there.
Build Bot
Comment 3 2014-07-22 10:40:10 PDT
Comment on attachment 235288 [details] Patch Attachment 235288 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6301733093376000 New failing tests: media/W3C/video/networkState/networkState_during_loadstart.html media/track/track-long-word-container-sizing.html
Build Bot
Comment 4 2014-07-22 10:40:14 PDT
Created attachment 235297 [details] Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Mihnea Ovidenie
Comment 5 2014-07-23 04:33:33 PDT
Created attachment 235352 [details] Patch for landing
WebKit Commit Bot
Comment 6 2014-07-23 05:12:56 PDT
Comment on attachment 235352 [details] Patch for landing Clearing flags on attachment: 235352 Committed r171476: <http://trac.webkit.org/changeset/171476>
WebKit Commit Bot
Comment 7 2014-07-23 05:13:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.